# devlab

./: gides  transform_inverse.cpp  user_manual.txt  заметки (copy)
26_01_24/package/: camera_module.py  sender.py
INFO/: .~lock.Sensors data.xlsx#  Sensors data.xlsx  sensors_range.ods
SteelRain for DISworking altitude/my_antenna/: my_antenna.ino
SteelRain for DISworking altitude/my_antenna (copy)/: my_antenna.ino
SteelRain for DISworking altitude/my_client/: client.cpp
SteelRain for DISworking altitude/my_server/: CMakeLists.txt
SteelRain for working altitude/my_client/: client.cpp  (+1 more)
access_point_5g_actual/: access_point.service  access_point.sh  dnsmasq.conf  hostapd.conf
adc_check/: results
box_gsm/: box_gsm.ino
box_wifi/: box_wifi.ino
boxes/: config.txt
drone_id/: hostapd.docx  hostapdR.conf  id_edit.py
drone_nav_not_ros/: маркеры.odt  маркеры2.odt
geopandas_my/: .gitignore  cvtest.py  detection.py  ground_socket.py  gui.py  keyGen.py  main.py  resieve_socket.py  send_socket.py  test.py  video_socket.py
i2c_test/: i2c_communication_master.py  i2c_communication_slave.py  uart_communication_rx.py
imu vn-100s/vnproglib/cpp/examples/getting_started/easy_plot_test/: CMakeLists.txt  main.cpp
imu vn-100s/vnproglib/cpp/examples/getting_started/easy_plot_test/easy_plot_cpp/: CMakeLists.txt
imu vn-100s/vnproglib/cpp/examples/getting_started/easy_plot_test/easy_plot_cpp/include/: easy_plot.hpp
imu vn-100s/vnproglib/cpp/examples/getting_started/easy_plot_test/easy_plot_cpp/include/main/: easy_plot_draw.hpp  easy_plot_window_spec.hpp
imu_general/: 1.py  ros_sim (3rd copy).py  ros_sim (4th copy).py  ros_sim (another copy).py  ros_sim (copy).py  ros_sim.py  ros_sim_reverse.py
open_img/: 1.txt  main.cpp  open_img.py
package/: camera_module.py  camera_test.py  controller.py  keyGen.py  receiver.py
quadrocopter_station/: great-circles.py
quadrocopter_station/SteelRain for DISworking altitude/my_client/: CMakeLists.txt  client.cpp  client_recieve.cpp
serial/: port.py  ports.py  serial_test.py
stub/: stub.ino
study_python/: def.py  dicts.py  files.py  lists.py  main.py  modules.py  multiprocessing.py  polindrom.py  saper.py  sets.py
test_i2c_uno/: test_i2c_uno.ino
(+242 files in other folders)
